--- a/appinfo.json
+++ b/appinfo.json
@@ -1,6 +1,6 @@
 {
     "bgColor": "black",
-    "vendor": "The Paradigm Grid",
+    "vendor": "MGD Tecnologia",
     "iconColor": "black",
     "largeIcon": "images/screenplay icon 440x440.png",
     "icon": "images/screenplay icon 80x80.png",
